# bwb-claim

cosigner-distributor/: Anchor.toml  package-lock.json  package.json
cosigner-distributor/programs/cosigner-distributor/: Cargo.toml
cosigner-distributor/programs/cosigner-distributor/src/: error.rs  lib.rs
cosigner-distributor/scripts/: cosigner-distributor.ts  cosigner-distributor02.ts  cosigner.ts
cosigner-distributor/tests/: cosigner-distributor.test.ts
cosigner-distributor/utils/: utils.ts
merkle-distributor/: Anchor.toml  package-lock.json  package.json  tsconfig.json
merkle-distributor/data/: airdrop-amounts.ts
merkle-distributor/programs/merkle-distributor/: Cargo.toml
merkle-distributor/programs/merkle-distributor/src/: error.rs  lib.rs  merkle_proof.rs
merkle-distributor/programs/merkle-distributor/src/utils/: ed25519.rs
merkle-distributor/script/: claim_test_sig.ts  claim_test_sig_02.ts  merkle-distributor.ts
merkle-distributor/tests/: merkle-distributor.spec.ts
merkle-distributor/utils/: balance-tree.ts  parse-balance-map.ts
merkle-distributor/utils/evm-src/: balance-tree.ts  parse-balance-map.ts
