[package]
name = "merkle-distributor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
# vipers = "2.0.6"
ahash = "=0.8.6"
hex = "0.4.3"
anchor-spl = "0.29.0"
solana-program = "=1.18.1"
